// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2 column stacking 1`] = `
.emotion-4 {
  height: 80px;
}

.emotion-5 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

.emotion-8 {
  height: 40px;
}

.emotion-10 {
  height: 20px;
}

.emotion-12 {
  height: 30px;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-2 column stacking23456"
  >
    <div
      id="2 column stacking23456"
    >
      <div
        class="ant-row emotion-1"
        id="2 column stacking-content23456"
      >
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-6"
          id="bl-b123456"
        >
          <div
            id="b123456"
          >
            <div
              class="ant-row emotion-1"
              id="b1-content23456"
            >
              <div
                class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                id="bl-tile_one23456"
              >
                <div
                  class="emotion-5"
                  id="tile_one23456"
                >
                  tile_one23456
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-18"
          id="bl-b223456"
        >
          <div
            id="b223456"
          >
            <div
              class="ant-row emotion-1"
              id="b2-content23456"
            >
              <div
                class="ant-col emotion-8 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
                id="bl-tile_two23456"
              >
                <div
                  class="emotion-5"
                  id="tile_two23456"
                >
                  tile_two23456
                </div>
              </div>
              <div
                class="ant-col emotion-10 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
                id="bl-tile_three23456"
              >
                <div
                  class="emotion-5"
                  id="tile_three23456"
                >
                  tile_three23456
                </div>
              </div>
              <div
                class="ant-col emotion-12 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
                id="bl-tile_four23456"
              >
                <div
                  class="emotion-5"
                  id="tile_four23456"
                >
                  tile_four23456
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid 1`] = `
.emotion-3 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-4 block grid23456"
  >
    <div
      id="4 block grid23456"
    >
      <div
        class="ant-row emotion-1"
        id="4 block grid-content23456"
      >
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_one23456"
        >
          <div
            class="emotion-3"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_two23456"
        >
          <div
            class="emotion-3"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_three23456"
        >
          <div
            class="emotion-3"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_four23456"
        >
          <div
            class="emotion-3"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with gutter 1`] = `
.emotion-3 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-4 block grid with gutter23456"
  >
    <div
      id="4 block grid with gutter23456"
    >
      <div
        class="ant-row emotion-1"
        id="4 block grid with gutter-content23456"
        style="margin: -25px -25px -25px -25px;"
      >
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_one23456"
          style="padding: 25px 25px 25px 25px;"
        >
          <div
            class="emotion-3"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_two23456"
          style="padding: 25px 25px 25px 25px;"
        >
          <div
            class="emotion-3"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_three23456"
          style="padding: 25px 25px 25px 25px;"
        >
          <div
            class="emotion-3"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_four23456"
          style="padding: 25px 25px 25px 25px;"
        >
          <div
            class="emotion-3"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 block grid with various heights 1`] = `
.emotion-2 {
  height: 50px;
}

.emotion-3 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

.emotion-4 {
  height: 40px;
}

.emotion-6 {
  height: 20px;
}

.emotion-8 {
  height: 30px;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-4 block grid with various heights23456"
  >
    <div
      id="4 block grid with various heights23456"
    >
      <div
        class="ant-row emotion-1"
        id="4 block grid with various heights-content23456"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_one23456"
        >
          <div
            class="emotion-3"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col emotion-4 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_two23456"
        >
          <div
            class="emotion-3"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col emotion-6 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_three23456"
        >
          <div
            class="emotion-3"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col emotion-8 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_four23456"
        >
          <div
            class="emotion-3"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4 sequential blocks 1`] = `
.emotion-3 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-4 sequential blocks23456"
  >
    <div
      id="4 sequential blocks23456"
    >
      <div
        class="ant-row emotion-1"
        id="4 sequential blocks-content23456"
      >
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tile_one23456"
        >
          <div
            class="emotion-3"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tile_two23456"
        >
          <div
            class="emotion-3"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tile_three23456"
        >
          <div
            class="emotion-3"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tile_four23456"
        >
          <div
            class="emotion-3"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`typical dashboard 1`] = `
.emotion-2 {
  height: 80px;
}

.emotion-3 {
  background: #269;
  border: 2px solid #00aaee;
  text-align: center;
  font-size: 12px;
  color: #fff;
}

<div>
  <div
    class="ant-col emotion-0 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
    id="bl-typical dashboard23456"
  >
    <div
      id="typical dashboard23456"
    >
      <div
        class="ant-row emotion-1"
        id="typical dashboard-content23456"
        style="margin: -5px -5px -5px -5px;"
      >
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-tile_one23456"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="emotion-3"
            id="tile_one23456"
          >
            tile_one23456
          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-tile_two23456"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="emotion-3"
            id="tile_two23456"
          >
            tile_two23456
          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-8"
          id="bl-tile_three23456"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="emotion-3"
            id="tile_three23456"
          >
            tile_three23456
          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_four23456"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="emotion-3"
            id="tile_four23456"
          >
            tile_four23456
          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-12"
          id="bl-tile_five23456"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="emotion-3"
            id="tile_five23456"
          >
            tile_five23456
          </div>
        </div>
        <div
          class="ant-col emotion-2 ant-col-xs-24 ant-col-sm-24 ant-col-md-24"
          id="bl-tile_six23456"
          style="padding: 5px 5px 5px 5px;"
        >
          <div
            class="emotion-3"
            id="tile_six23456"
          >
            tile_six23456
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
